image test concourse debian centos rhel (#139)
* add image test task in pipeline

fix bug

* add other image-test job

* make iamge test as task

* using full image name instead family

* add image test task in pipeline

fix bug

* fix centos-7

* fix missing image-test

* add almalinux rocky-linux

--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -665,6 +665,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/almalinux_8.publish.json"
       environment: "test"
+  - task: image-test-almalinux-8
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/almalinux-8-v((.:source-version))
 # centos
 - name: publish-to-testing-centos-7
   plan:
@@ -691,6 +695,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/centos_7.publish.json"
       environment: "test"
+  - task: image-test-centos-7
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/centos-7-v((.:source-version))
 - name: publish-to-testing-centos-8
   plan:
   - get: guest-test-infra
@@ -716,6 +724,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/centos_8.publish.json"
       environment: "test"
+  - task: image-test-centos-8
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/centos-8-v((.:source-version))
 - name: publish-to-testing-centos-stream-8
   plan:
   - get: guest-test-infra
@@ -741,6 +753,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "test"
+  - task: image-test-centos-stream-8
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/centos-stream-8-v((.:source-version))
 # rhel
 - name: publish-to-testing-rhel-7
   plan:
@@ -767,6 +783,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_7.publish.json"
       environment: "test"
+  - task: image-test-rhel-7
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-7-v((.:source-version))
 - name: publish-to-testing-rhel-8
   plan:
   - get: guest-test-infra
@@ -792,6 +812,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_8.publish.json"
       environment: "test"
+  - task: image-test-rhel-8
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-8-v((.:source-version))
 - name: publish-to-testing-rhel-7-byos
   plan:
   - get: guest-test-infra
@@ -817,6 +841,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_7_byos.publish.json"
       environment: "test"
+  - task: image-test-rhel-7-byos
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-7-byos-v((.:source-version))
 - name: publish-to-testing-rhel-8-byos
   plan:
   - get: guest-test-infra
@@ -842,6 +870,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_8_byos.publish.json"
       environment: "test"
+  - task: image-test-rhel-8
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-8-byos-v((.:source-version))
 - name: publish-to-testing-rhel-7-4-sap
   plan:
   - get: guest-test-infra
@@ -867,6 +899,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_7_4_sap.publish.json"
       environment: "test"
+  - task: image-test-rhel-7-4-sap
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-7-4-sap-v((.:source-version))
 - name: publish-to-testing-rhel-7-6-sap
   plan:
   - get: guest-test-infra
@@ -892,6 +928,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_7_6_sap.publish.json"
       environment: "test"
+  - task: image-test-rhel-7-6-sap
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-7-6-sap-v((.:source-version))
 - name: publish-to-testing-rhel-7-7-sap
   plan:
   - get: guest-test-infra
@@ -917,6 +957,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_7_7_sap.publish.json"
       environment: "test"
+  - task: image-test-rhel-7-7-sap
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-7-7-sap-v((.:source-version))
 - name: publish-to-testing-rhel-8-1-sap
   plan:
   - get: guest-test-infra
@@ -942,6 +986,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_8_1_sap.publish.json"
       environment: "test"
+  - task: image-test-rhel-8-1-sap
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-8-1-sap-v((.:source-version))
 - name: publish-to-testing-rhel-8-2-sap
   plan:
   - get: guest-test-infra
@@ -967,6 +1015,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rhel_8_2_sap.publish.json"
       environment: "test"
+  - task: image-test-rhel-8-2-sap
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rhel-8-2-sap-v((.:source-version))
 # rocky-linux
 - name: publish-to-testing-rocky-linux-8
   plan:
@@ -993,6 +1045,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/rocky_linux_8.publish.json"
       environment: "test"
+  - task: image-test-rocky-linux-8
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/rocky-linux-8-v((.:source-version))
 # debian
 - name: publish-to-testing-debian-9
   plan:
@@ -1019,6 +1075,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_9.publish.json"
       environment: "test"
+  - task: image-test-debian-9
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/debian-9-v((.:source-version))
 - name: publish-to-testing-debian-10
   plan:
   - get: guest-test-infra
@@ -1044,6 +1104,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_10.publish.json"
       environment: "test"
+  - task: image-test-debian-10
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/debian-10-v((.:source-version))
 - name: publish-to-testing-debian-11
   plan:
   - get: guest-test-infra
@@ -1069,6 +1133,10 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "debian/debian_11.publish.json"
       environment: "test"
+  - task: image-test-debian-11
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      images: projects/bct-prod-images/global/images/debian-11-v((.:source-version))
 
 # Publish to staging
 # almalinux
@@ -1122,11 +1190,6 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "enterprise_linux/centos_7.publish.json"
       environment: "staging"
-  - task: image-test-centos-7
-    file: guest-test-infra/concourse/tasks/image-test.yaml
-    vars:
-      images: projects/bct-prod-images/global/images/family/centos-7
-
 - name: publish-to-staging-centos-8
   plan:
   - get: guest-test-infra
