Adding Windows Server image builds
- Added windows-image-build pipeline
- Added windows-image-build.yaml for windows-image-build pipeline
- Added daisy-build-image-windows.yaml to pass all of the needed windows build variables.

--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -21,3 +21,5 @@ jobs:
     file: guest-test-infra/concourse/pipelines/bare-metal-image-build.yaml
   - set_pipeline: partner-image-export
     file: guest-test-infra/concourse/pipelines/partner-image-export.yaml
+  - set_pipeline: windows-image-build
+    file: guest-test-infra/concourse/pipelines/windows-image-build.yaml
