--- a/concourse/tasks/daisy-build-images-windows.yaml
+++ b/concourse/tasks/daisy-build-images-windows.yaml
@@ -27,5 +27,6 @@ run:
   - -var:build_date=((build_date))
   - -var:google_cloud_repo=((google_cloud_repo))
   - -var:gcs_url=((gcs_url))
+  - -var:gcs_interal_url=((gcs_internal_url))
   - -compute_endpoint_override=https://www.googleapis.com/compute/beta/projects/
   - ./compute-image-tools/daisy_workflows/build-publish/((wf))
