--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -166,7 +166,7 @@ jobs:
     vars:
       wf: "windows/windows-server-20h2-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.winserver-20h2-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -208,7 +208,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2004-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.winserver-2004-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -250,7 +250,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2019-dc-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.win2019-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -292,7 +292,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2019-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.win2019-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -334,7 +334,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2016-dc-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.win2016-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -376,7 +376,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2016-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.win2016-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -418,7 +418,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2012r2-dc-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.win2012-r2-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
@@ -460,7 +460,7 @@ jobs:
     vars:
       wf: "windows/windows-server-2012r2-dc-core-uefi.wf.json"
       gcs_url: ((.:gcs-url))
-      gcs_interal_url: ((.:gcs-internal-url))
+      gcs_internal_url: ((.:gcs-internal-url))
       iso: ((iso-paths.win2012-r2-64))
       pwsh: ((windows-paths.gcs_pwsh))
       dotnet48: ((windows-paths.gcs_dotnet48))
